# ASTZ

./: .gitignore  16_11_27_1536_0035.out  APSU004.err  APSU004.out  APSU_006.err  APSU_006.out  ASTZ_environment.yml  E017.err  E017.out  EXAFEL.out  README  bins_frequency.txt  embedding_log.txt  hy_qoz_5e-3.err  pca-1.txt  pca-14.txt  pca-4.txt  pca-6.txt  ppl_log_astz.txt  ppl_log_awq.txt  ppl_log_original.txt  ppl_log_q.txt  ppl_log_qoz2.txt  ppl_log_quantize.txt  quantization_log.txt  rename_files_qoz2.py  rename_files_to_increase_eb_accuracy.py  run_job.sh  sorted_parameter.txt  starter.py  starter_embedding.py  test.py  test_transformer_example.py  test_transformer_ppl.py  threshold.txt  tune_eb.py  语句.txt
c_code/: ByteUtil.hpp  CMakeLists.txt  Compressor.hpp  Config.hpp  Decomposition.hpp  Encoder.hpp  FHDEAlgo.hpp  FHDEDecomposition.hpp  FHDEDispatcher.hpp  FHDEGenericCompressor.hpp  FileUtil.hpp  HuffmanEncoder.hpp  Interpolators.hpp  Iterator.hpp  LinearQuantizer.hpp  Lossless.hpp  Lossless_zstd.hpp  MemoryUtil.hpp  ParamTuning.hpp  Quantizer.hpp  Statistic.hpp  Timer.hpp  def.hpp  fhde.cpp  fhde.hpp  fhdeimpl.hpp  version.hpp
c_code/SZ3/include/SZ3/api/: sz.hpp
c_code/SZ3/include/SZ3/decomposition/: Decomposition.hpp  FHDEDecomposition.cpp  FHDEDecomposition.hpp  InterpolationDecomposition.hpp
c_code/SZ3/include/SZ3/lossless/: Lossless_zstd.hpp
c_code/SZ3/include/SZ3/quantizer/: LinearQuantizer.hpp
c_code/SZ3/include/SZ3/utils/: Interpolators.hpp  ParamTuning.hpp
c_code/SZ3/tools/sz3/: CMakeLists.txt  sz3.cpp
c_code/zstd/: CMakeLists.txt
(+384 files in other folders)
